work done for 10/13/25

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h3 {
   color: #ffb347;
   text-transform: uppercase;
   letter-spacing: 2px;
+  padding-bottom: 6px;
 }
 
 a {
@@ -154,7 +155,7 @@ nav ul li a:hover {
 /* --- Keyframes --- */
 @keyframes pulseGlow {
   0% {
-    box-shadow: 0 0 25px #ffb34755;
+    box-shadow: 0 0 25px #5a472d55;
   }
   50% {
     box-shadow: 0 0 45px #ffb347aa;
@@ -330,4 +331,61 @@ section.visible {
     width: 220px;
     height: 220px;
   }
+}
+
+/* ************************* */
+/* CTA SECTION */
+/* ************************* */
+
+.cta-text-box {
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #000;
+  background-color: #ffb44a;
+  border-radius: 11px;
+}
+
+.cta .heading-secondary {
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+
+.cta-text {
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 4.8rem;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #ccc;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(144, 4, 46, 0.1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
