--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 section {
   padding: 100px 10%;
-  min-height: 100vh;
+  min-height: 50vh;
 }
 
 h1,
@@ -38,6 +38,42 @@ a:hover {
   text-shadow: 0 0 8px #ffb347;
 }
 
+.btn,
+.btn:link,
+.btn:visited {
+  display: inline-block;
+
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 600;
+  padding: 1rem 2rem;
+  border-radius: 9px;
+  margin-top: 1.2rem;
+  margin-bottom: 1.2rem;
+
+  /* Only necessary for .btn  */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+  color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+  color: #fff;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
 /* --- Navbar --- */
 nav {
   position: fixed;
@@ -245,6 +281,62 @@ nav ul li a:hover {
   font-size: 0.9em;
 }
 
+/* ************************* */
+/* CTA SECTION */
+/* ************************* */
+
+.cta-text-box {
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+  color: #000000;
+  background-color: #ffb44a;
+  border-radius: 11px;
+}
+
+.cta .heading-secondary {
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+
+.cta-text {
+  font-size: 1.1rem;
+  line-height: 1.8rem;
+  margin-bottom: 4.8rem;
+}
+
+.cta-form {
+  display: table;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-top: 2.2rem;
+  margin-bottom: 1rem;
+}
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+
+  font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #ccc;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(144, 4, 46, 0.1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
 /* --- Contact Section --- */
 #contact {
   text-align: center;
@@ -331,61 +423,4 @@ section.visible {
     width: 220px;
     height: 220px;
   }
-}
-
-/* ************************* */
-/* CTA SECTION */
-/* ************************* */
-
-.cta-text-box {
-  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
-  color: #000;
-  background-color: #ffb44a;
-  border-radius: 11px;
-}
-
-.cta .heading-secondary {
-  color: inherit;
-  margin-bottom: 3.2rem;
-}
-
-.cta-text {
-  font-size: 1.8rem;
-  line-height: 1.8;
-  margin-bottom: 4.8rem;
-}
-
-.cta-form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 3.2rem;
-  row-gap: 2.4rem;
-}
-
-.cta-form label {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: 500;
-  margin-bottom: 1.2rem;
-}
-.cta-form input,
-.cta-form select {
-  width: 100%;
-  padding: 1.2rem;
-  font-size: 1.8rem;
-  font-family: inherit;
-  color: inherit;
-  border: none;
-  background-color: #ccc;
-  border-radius: 9px;
-  box-shadow: 0 1px 2px rgba(144, 4, 46, 0.1);
-}
-
-.cta-form input::placeholder {
-  color: #aaa;
-}
-
-.cta *:focus {
-  outline: none;
-  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
 }
