--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ nav ul li a:hover {
 /* --- Projects Section --- */
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
   gap: 30px;
   margin-top: 40px;
 }
@@ -304,7 +304,7 @@ nav ul li a:hover {
 }
 
 .cta-form {
-  display: table;
+  display: inline-block;
 }
 
 .cta-form label {
