--- a/style.css
+++ b/style.css
@@ -38,6 +38,24 @@ a:hover {
   text-shadow: 0 0 8px #ffb347;
 }
 
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #ffffff;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 .btn,
 .btn:link,
 .btn:visited {
