editing projects section for mobile view

--- a/queries.css
+++ b/queries.css
@@ -232,9 +232,6 @@ Insted, 1rem =1em =16px */
     grid-column: span 3;
   }
 
-  .projects {
-    grid-auto-flow: none;
-  }
 }
 
 /* *************************  */
@@ -242,8 +239,14 @@ Insted, 1rem =1em =16px */
 /* ************************* */
 
 @media (max-width: 34em) {
+
   .grid {
-    row-gap: 4.8rem;
+    display: list-item;
+  }
+
+  .projects {
+    padding: 6.4rem 2.4rem;
+    display: list-item;
   }
 
   .grid--2-cols,
