--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ nav ul li a:hover {
 }
 
 .project-card {
-  background: #1a1a1a;
+  background: #efebeb;
   border-radius: 10px;
   overflow: hidden;
   transition: 0.3s;
