--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ a:hover {
 .btn--outline:link,
 .btn--outline:visited {
   background-color: #fff;
-  color: #fffefe;
+  color: #555;
 }
 /* --- Navbar --- */
 nav {
@@ -274,7 +274,7 @@ nav ul li a:hover {
 }
 
 .project-card {
-  background: #ffffff;
+  background: #1a1a1a;
   border-radius: 10px;
   overflow: hidden;
   transition: 0.3s;
